--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,4 +1,13 @@
 // Mixins Here
+.navbar-fixed(@opacity) {
+  overflow: hidden;
+  background-color: @sea-shell;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  opacity:@opacity;
+}
+
 .mobile-font-size(@font-size, @paddingL, @paddingR) {
   font-size: @font-size;
   padding-left: @paddingL;
@@ -14,4 +23,3 @@
   max-width: 140px;
   font-size: 1.75rem;
 }
-
