--- a/less/navigation.less
+++ b/less/navigation.less
@@ -11,7 +11,7 @@ nav a {
   justify-content: space-between;
   align-items: center;
   padding: 2rem 0px;
-  background: @sea-shell;
+  .navbar-fixed(0.95);
 }
 
 .nav-links {
@@ -28,4 +28,18 @@ nav a {
   font-family: 'Russo One';
   font-size: 4rem;
   padding: 1.4rem 0px 1.4rem 0px;
+}
+
+.logo:hover {
+  animation-name: example;
+  animation-duration: 2s;
+}
+
+@keyframes example {
+  from {
+    color: rgba(4, 0, 255, 0.342);
+  }
+  to {
+    color: rgb(0, 153, 255);
+  }
 }
